--- a/composer.json
+++ b/composer.json
@@ -55,11 +55,5 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-     "post-install-cmd": [
-     "php artisan clear-compiled",
-     "php artisan optimize",
-     "chmod -R 777 public/"
- ]
+    "minimum-stability": "dev"
 }
