--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,5 +17,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ task_view\index.php [L]
+    RewriteRule ^ index.php [L]
 </IfModule>
